# shardmind-private

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.cloud-mcp  PRIVATE_ALPHA_SETUP.md  README.md  pyproject.toml
deploy/: railway-cloud-mcp.md
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.js
desktop/src/: main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
shared/schemas/: note.schema.json  paper_card.schema.json
shared/templates/: note.md  paper_card.md
src/shardmind/: __init__.py  bootstrap.py  cli.py  config.py  errors.py  models.py  paper_cards.py  schemas.py
src/shardmind/cloud/: __init__.py  main.py  mcp.py
src/shardmind/index/: embeddings.py  service.py
src/shardmind/mcp/: __init__.py  main.py  tools.py
src/shardmind/vault/: bootstrap.py  ids.py  markdown.py  service.py
tests/: test_cli.py  test_cloud.py  test_cloud_mcp.py  test_index.py  test_mcp.py  test_schema.py  test_vault.py
