[project]
name = "shardmind"
version = "0.1.0"
description = "Local-first research memory system bootstrap."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Francesco" }]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
shardmind = "shardmind.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shardmind"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
